# ranger_navigation

./: .gitignore
bringup/: CMakeLists.txt  package.xml
bringup/launch/: bringup.launch.py  robot.launch.py  sensors.launch.py
groundgrid/: CMakeLists.txt  README.md  package.xml
groundgrid/config/: groundgrid.yaml
groundgrid/include/groundgrid/: GroundGrid.hpp  GroundGridConfig.hpp  GroundGridFwd.hpp  GroundSegmentation.hpp
groundgrid/launch/: groundgrid_with_occupancy.launch.py
groundgrid/rviz/: groundgrid.rviz
groundgrid/src/: GroundGrid.cpp  GroundGridNode.cpp  GroundSegmentation.cpp  OccupancyMapGenerator.cpp
lidar_localization/: CMakeLists.txt  LICENSE  README.md  package.xml
lidar_localization/config/: params.yaml  params_mapping.yaml  params_ouster32.yaml  params_vlp16.yaml  rviz2.rviz  rviz2_localization.rviz  rviz2_mapping.rviz
lidar_localization/include/lidar_localization/: mapMatching.h  rosbag_with_gt.hpp  utility.hpp
lidar_localization/include/lidar_localization/utils/: customVoxelGrid.h  globalmapServer.h  gpsTransformation.h
lidar_localization/launch/: run.launch.py  run_mapping_launch.py
lidar_localization/ndt_omp/: CMakeLists.txt
lidar_localization/ndt_omp/include/pclomp/: ndt_omp.h  ndt_omp_impl.hpp
lidar_localization/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  localizationOptmization.cpp  mapMatching.cpp  mapOptmization.cpp
lidar_localization/src/utils/: globalmapServer.cpp  gpsTransformation.cpp  rosbag_with_gt.cpp
nav2_navigation/: CMakeLists.txt  README.md  package.xml
nav2_navigation/config/: goal_publisher_params.yaml  m3_isacc_params.yaml  m3_params.yaml  ranger_isaac_params.yaml  ranger_mini_params.yaml  rviz2.rviz
nav2_navigation/include/nav2_navigation/: goal_publisher.hpp  goal_publisher_gui.hpp
nav2_navigation/launch/: isaac_sim_launch.py  nav2_launch.py  navigation_launch.py  rosbag_visualize_launch.py
nav2_navigation/scripts/: random_goal_runner.py
nav2_navigation/src/: goal_publisher.cpp  goal_publisher_gui.cpp
nav2_navigation/waypoints/: waypoints_final.yaml
