<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Top-level bringup launches for Ranger Mini 3.0 (sensors + robot base).</description>
  <maintainer email="isr3856@gmail.com">isrsoon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>um7</exec_depend>
  <exec_depend>ranger_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
