<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>groundgrid</name>
  <version>2.0.0</version>
  <description>GroundGrid: Ground Segmentation and Terrain Estimation for ROS2</description>

  <maintainer email="n.steinke@fu-berlin.de">Dahlem Center for Machine Learning and Robotics, Autonomos-Labs, FU Berlin</maintainer>

  <license>BSD</license>

  <url type="website">https://www.autonomos-labs.de/</url>

  <author email="n.steinke@fu-berlin.de">Dahlem Center for Machine Learning and Robotics, Autonomos-Labs, FU Berlin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!-- Message types -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- TF2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Point cloud processing -->
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

  <!-- Grid map -->
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>

  <!-- Image processing -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- External dependencies -->
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
